初始密码支持自定义修改策略

--- a/rc-api/src/main/resources/templates/order/RcFrenchCurrencyOrderRelease/RcFrenchCurrencyOrderRelease.html
+++ b/rc-api/src/main/resources/templates/order/RcFrenchCurrencyOrderRelease/RcFrenchCurrencyOrderRelease.html
@@ -11,6 +11,10 @@
                     <div class="select-list">
                         <ul>
                             <li>
+                                <label>订单id：</label>
+                                <input type="text" name="orderId"/>
+                            </li>
+                            <li>
                                 <label>发布者id：</label>
                                 <input type="text" name="sellerUserId"/>
                             </li>
@@ -114,6 +118,10 @@
                     field: 'id',
                     title: '订单id',
                     visible: false
+                },
+                {
+                    field: 'orderId',
+                    title: '订单id'
                 },
                 {
                     field: 'sellerUserId',
