--- a/rc-api/src/main/resources/templates/order/RcFrenchCurrencyOrderRelease/add.html
+++ b/rc-api/src/main/resources/templates/order/RcFrenchCurrencyOrderRelease/add.html
@@ -8,6 +8,12 @@
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-RcFrenchCurrencyOrderRelease-add">
             <div class="form-group">    
+                <label class="col-sm-3 control-label">订单id：</label>
+                <div class="col-sm-8">
+                    <input name="orderId" class="form-control" type="text">
+                </div>
+            </div>
+            <div class="form-group">    
                 <label class="col-sm-3 control-label">发布者id：</label>
                 <div class="col-sm-8">
                     <input name="sellerUserId" class="form-control" type="text">
