--- a/rc-api/src/main/resources/templates/order/RcFrenchCurrencyOrderRelease/edit.html
+++ b/rc-api/src/main/resources/templates/order/RcFrenchCurrencyOrderRelease/edit.html
@@ -9,6 +9,12 @@
         <form class="form-horizontal m" id="form-RcFrenchCurrencyOrderRelease-edit" th:object="${rcFrenchCurrencyOrderRelease}">
             <input name="id" th:field="*{id}" type="hidden">
             <div class="form-group">    
+                <label class="col-sm-3 control-label">订单id：</label>
+                <div class="col-sm-8">
+                    <input name="orderId" th:field="*{orderId}" class="form-control" type="text">
+                </div>
+            </div>
+            <div class="form-group">    
                 <label class="col-sm-3 control-label">发布者id：</label>
                 <div class="col-sm-8">
                     <input name="sellerUserId" th:field="*{sellerUserId}" class="form-control" type="text">
