--- a/rc-api/src/main/resources/templates/order/rcFrenchCurrencyOrderRelease/edit.html
+++ b/rc-api/src/main/resources/templates/order/rcFrenchCurrencyOrderRelease/edit.html
@@ -6,7 +6,7 @@
 </head>
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
-        <form class="form-horizontal m" id="form-rcFrenchCurrencyOrderRelease-edit" th:object="${rcFrenchCurrencyOrderRelease}">
+        <form class="form-horizontal m" id="form-RcFrenchCurrencyOrderRelease-edit" th:object="${rcFrenchCurrencyOrderRelease}">
             <input name="id" th:field="*{id}" type="hidden">
             <div class="form-group">    
                 <label class="col-sm-3 control-label">交易类型：</label>
@@ -45,7 +45,13 @@
                 </div>
             </div>
             <div class="form-group">    
-                <label class="col-sm-3 control-label">交易货币例：BTC-USDT：</label>
+                <label class="col-sm-3 control-label">数量：</label>
+                <div class="col-sm-8">
+                    <input name="number" th:field="*{number}" class="form-control" type="text">
+                </div>
+            </div>
+            <div class="form-group">    
+                <label class="col-sm-3 control-label">交易币种：</label>
                 <div class="col-sm-8">
                     <input name="transactionCurrency" th:field="*{transactionCurrency}" class="form-control" type="text">
                 </div>
@@ -63,13 +69,13 @@
                 </div>
             </div>
             <div class="form-group">    
-                <label class="col-sm-3 control-label">卖出数量：</label>
+                <label class="col-sm-3 control-label">出售数量：</label>
                 <div class="col-sm-8">
                     <input name="sellingQuantity" th:field="*{sellingQuantity}" class="form-control" type="text">
                 </div>
             </div>
             <div class="form-group">    
-                <label class="col-sm-3 control-label">卖出价格：</label>
+                <label class="col-sm-3 control-label">出售价格：</label>
                 <div class="col-sm-8">
                     <input name="sellingPrice" th:field="*{sellingPrice}" class="form-control" type="text">
                 </div>
@@ -87,7 +93,7 @@
                 </div>
             </div>
             <div class="form-group">    
-                <label class="col-sm-3 control-label">收益：</label>
+                <label class="col-sm-3 control-label">可收益：</label>
                 <div class="col-sm-8">
                     <input name="profit" th:field="*{profit}" class="form-control" type="text">
                 </div>
@@ -124,14 +130,14 @@
     <th:block th:include="include :: footer" />
     <th:block th:include="include :: datetimepicker-js" />
     <script th:inline="javascript">
-        var prefix = ctx + "order/rcFrenchCurrencyOrderRelease";
-        $("#form-rcFrenchCurrencyOrderRelease-edit").validate({
+        var prefix = ctx + "order/RcFrenchCurrencyOrderRelease";
+        $("#form-RcFrenchCurrencyOrderRelease-edit").validate({
             focusCleanup: true
         });
 
         function submitHandler() {
             if ($.validate.form()) {
-                $.operate.save(prefix + "/edit", $('#form-rcFrenchCurrencyOrderRelease-edit').serialize());
+                $.operate.save(prefix + "/edit", $('#form-RcFrenchCurrencyOrderRelease-edit').serialize());
             }
         }
 
