--- a/rc-api/src/main/resources/templates/digital/rate/rate.html
+++ b/rc-api/src/main/resources/templates/digital/rate/rate.html
@@ -15,6 +15,10 @@
                                 <input type="text" name="exchangeRateCode"/>
                             </li>
                             <li>
+                                <label>汇率：</label>
+                                <input type="text" name="exchangeRate"/>
+                            </li>
+                            <li>
                                 <label>汇率名称：</label>
                                 <input type="text" name="exchangeRateName"/>
                             </li>
@@ -71,6 +75,10 @@
                 {
                     field: 'exchangeRateCode',
                     title: '汇率代码'
+                },
+                {
+                    field: 'exchangeRate',
+                    title: '汇率'
                 },
                 {
                     field: 'exchangeRateName',
