--- a/rc-api/src/main/resources/templates/UserList/userData/userData.html
+++ b/rc-api/src/main/resources/templates/UserList/userData/userData.html
@@ -14,68 +14,68 @@
                                 <label>手机号：</label>
                                 <input type="text" name="mobile"/>
                             </li>
-                            <li>
-                                <label>信用分：</label>
-                                <input type="text" name="credit"/>
-                            </li>
-                            <li>
-                                <label>钱包金额：</label>
-                                <input type="text" name="money"/>
-                            </li>
+<!--                            <li>-->
+<!--                                <label>信用分：</label>-->
+<!--                                <input type="text" name="credit"/>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                                <label>钱包金额：</label>-->
+<!--                                <input type="text" name="money"/>-->
+<!--                            </li>-->
                             <li>
                                 <label>账号：</label>
                                 <input type="text" name="account"/>
                             </li>
-                            <li>
-                                <label>密码：</label>
-                                <input type="text" name="password"/>
-                            </li>
-                            <li>
-                                <label>密钥：</label>
-                                <input type="text" name="salt"/>
-                            </li>
-                            <li>
-                                <label>安全码：</label>
-                                <input type="text" name="safeword"/>
-                            </li>
-                            <li>
-                                <label>选择的语言：</label>
-                                <input type="text" name="language"/>
-                            </li>
-                            <li>
-                                <label>是否在线：</label>
-                                <input type="text" name="online"/>
-                            </li>
+<!--                            <li>-->
+<!--                                <label>密码：</label>-->
+<!--                                <input type="text" name="password"/>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                                <label>密钥：</label>-->
+<!--                                <input type="text" name="salt"/>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                                <label>安全码：</label>-->
+<!--                                <input type="text" name="safeword"/>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                                <label>选择的语言：</label>-->
+<!--                                <input type="text" name="language"/>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                                <label>是否在线：</label>-->
+<!--                                <input type="text" name="online"/>-->
+<!--                            </li>-->
                             <li class="select-time">
                                 <label>注册时间：</label>
                                 <input type="text" class="time-input" id="startTime" placeholder="开始时间" name="params[beginRegistertime]"/>
                                 <span>-</span>
                                 <input type="text" class="time-input" id="endTime" placeholder="结束时间" name="params[endRegistertime]"/>
                             </li>
-                            <li>
-                                <label>是否派单：</label>
-                                <input type="text" name="paidan"/>
-                            </li>
-                            <li>
-                                <label>上级id：</label>
-                                <input type="text" name="parentid"/>
-                            </li>
-                            <li>
-                                <label>身份：</label>
-                                <input type="text" name="identity"/>
-                            </li>
+<!--                            <li>-->
+<!--                                <label>是否派单：</label>-->
+<!--                                <input type="text" name="paidan"/>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                                <label>上级id：</label>-->
+<!--                                <input type="text" name="parentid"/>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                                <label>身份：</label>-->
+<!--                                <input type="text" name="identity"/>-->
+<!--                            </li>-->
                             <li>
                                 <label>邀请码：</label>
                                 <input type="text" name="invitation"/>
                             </li>
-                            <li>
-                                <label>用户token：</label>
-                                <input type="text" name="token"/>
-                            </li>
-                            <li>
-                                <label>平台id：</label>
-                                <input type="text" name="platformId"/>
-                            </li>
+<!--                            <li>-->
+<!--                                <label>用户token：</label>-->
+<!--                                <input type="text" name="token"/>-->
+<!--                            </li>-->
+<!--                            <li>-->
+<!--                                <label>平台id：</label>-->
+<!--                                <input type="text" name="platformId"/>-->
+<!--                            </li>-->
                             <li>
                                 <a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
                                 <a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
