融创接口定义

--- a/rc-api/src/main/resources/templates/order/rcFrenchCurrencyOrderRelease/RcFrenchCurrencyOrderRelease.html
+++ b/rc-api/src/main/resources/templates/order/rcFrenchCurrencyOrderRelease/RcFrenchCurrencyOrderRelease.html
@@ -54,11 +54,11 @@
                             </li>
                             <li>
                                 <label>出售数量：</label>
-                                <input type="text" name="sellingQuantity"/>
+                                <input type="text" name="sellQuantity"/>
                             </li>
                             <li>
                                 <label>出售价格：</label>
-                                <input type="text" name="sellingPrice"/>
+                                <input type="text" name="sellPrice"/>
                             </li>
                             <li>
                                 <label>花费USDT：</label>
@@ -177,11 +177,11 @@
                     title: '买入价格'
                 },
                 {
-                    field: 'sellingQuantity',
+                    field: 'sellQuantity',
                     title: '出售数量'
                 },
                 {
-                    field: 'sellingPrice',
+                    field: 'sellPrice',
                     title: '出售价格'
                 },
                 {
