--- a/rc-api/src/main/resources/templates/order/rcFrenchCurrencyOrderRelease/add.html
+++ b/rc-api/src/main/resources/templates/order/rcFrenchCurrencyOrderRelease/add.html
@@ -70,13 +70,13 @@
             <div class="form-group">    
                 <label class="col-sm-3 control-label">出售数量：</label>
                 <div class="col-sm-8">
-                    <input name="sellingQuantity" class="form-control" type="text">
+                    <input name="sellQuantity" class="form-control" type="text">
                 </div>
             </div>
             <div class="form-group">    
                 <label class="col-sm-3 control-label">出售价格：</label>
                 <div class="col-sm-8">
-                    <input name="sellingPrice" class="form-control" type="text">
+                    <input name="sellPrice" class="form-control" type="text">
                 </div>
             </div>
             <div class="form-group">    
